--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <p>My Hello World!!! its Me Hidzqi SA as Data Scientist.</p>
 
 <h2>Hallo Semuanya</h2>
+<p>Saya Memulai html sederhana</p>
 </body>
 </html>
